# ruts

./: .gitignore  .prettierignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  readme.zh-CN.md
.github/workflows/: ci.yml
bulls-and-cows/: Anchor.toml  Cargo.toml  package.json  pnpm-lock.yaml
bulls-and-cows/client/: client.ts
bulls-and-cows/src/: lib.rs  main.rs
docs/: rust.md
programs/bulls-and-cows/: readme.md
programs/bulls-and-cows/client/: client.ts
programs/bulls-and-cows/program/: Cargo.toml
programs/bulls-and-cows/program/src/: lib.rs
programs/bulls-and-cows/src/: lib.rs
programs/counter/: package.json  pnpm-lock.yaml
programs/counter/program/: Cargo.toml
programs/counter/tests/: counter.test.ts
