[package]
name = "bulls-and-cows"
version = "0.0.0"
edition = "2021"

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.31.1"
solana-program = "1.18.0"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.solana]
program = "3wGUG3qnLtCZFg3ukqeQXNhVYjrr3Jai4RnzEDyqjphc"

# Allow unexpected cfg values used by Anchor and Solana
[package.metadata.cargo-udeps.ignore]
normal = [
    "anchor-debug",
    "no-entrypoint", 
    "cpi",
    "custom-heap",
    "custom-panic",
    "no-idl",
    "no-log-ix-name",
    "solana"
]

# Security audit configuration
[package.metadata.cargo-audit]
ignore = [
    # Allow warnings for unmaintained crates that are transitive dependencies       
]
