[package]
name = "bulls-and-cows"
version = "0.0.0"
edition = "2021"

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.31.1"
solana-program = "1.18.0"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.solana]
program = "3wGUG3qnLtCZFg3ukqeQXNhVYjrr3Jai4RnzEDyqjphc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

# Security audit configuration
[package.metadata.cargo-audit]
ignore = [
    # Allow warnings for unmaintained crates that are transitive dependencies       
]
